[package]
name = "ascii-artist"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
image = "0.25"
rfd = "0.15"
arboard = "3"
ab_glyph = "0.2"
imageproc = "0.25"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
